--- a/Teams/Amazing-As/Dog Website/css/style.css
+++ b/Teams/Amazing-As/Dog Website/css/style.css
@@ -1,8 +1,7 @@
-
 body
 {
   
-background-image:url("bg.png");
+background-image:url("http://www.albany.edu/~gh445682/dog/bg.png");
 background-repeat:repeat;
 }
 #sideBar {
