--- a/Assignments/OO_Portfolio.css
+++ b/Assignments/OO_Portfolio.css
@@ -4,54 +4,70 @@
 
 .container {
     width:60em;
-    margin:0 auto;
-    position:relative;
+	margin:0 auto;
+	position:relative; 
 }
 .header {
-    border-top:1em solid black;
+	border-top:1em solid black;
 }
 
 .clearfix{clear:both;}
 
 .nav {
-    width:100%;
-    float:right;
-    margin:0 0 2em;
-   
+	width:100%;
+	float:right;
+	margin:0 0 2em;
+	
 }
 
 h1,h2,h3 {
-    margin:0.25em 0 0.5em;
-    font-weight:700;
-    line-height:2em;
+	
 }
 h1 {
-    font-size:7em;
-    text-align:center;
-    float:left;
-    width:100%;
+	font-size:7em;
+	text-align:center;
+	float:left;
+	width:100%;
 }
 
 .nav li a {
-    display:block;
-    float:left;
-    width:25%;
-    text-align:center;
-    font-weight:700;
-    padding:1em 0;
-    background:black;
-    color:white;
-    text-decoration:none;
+	display:block;
+	float:left;
+	width:25%;
+	text-align:center;
+	font-weight:700;
+	padding:1em 0;
+	background:black;
+	color:white;
+	text-decoration:none;
 }
 .nav a:hover{
-    font-style:italic;
+	font-style:italic;
 }
 .lead {
-    padding:1em 0;
-    margin:1em 0 3em;
+	padding:1em 0;
+	margin:1em 0 3em; 
 }
 img {
-    width:60%;
-    margin: 0 auto;
-   
+	width:60%;
+	margin: 0 auto;
+	
 }
+.row {
+	width:50%;
+	margin: 0 auto;
+	}
+h2 
+{
+	font-family:"Courier New", Courier, monospace;
+	font-size:2em;
+}
+
+h3{
+	font-family:"Courier New", Courier, monospace;
+	font-size:1em;
+	}
+table row li {
+	font-family:"Courier New", Courier, monospace;
+	font-size:3em;
+	}
